--- a/SimpleUrlShortener/Client/simpleshortener_app/package.json
+++ b/SimpleUrlShortener/Client/simpleshortener_app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env.local",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -25,6 +25,12 @@
     "vue-tsc": "^1.8.8"
   },
   "dependencies": {
-    "daisyui": "^3.5.1"
+    "@pinia/nuxt": "^0.4.11",
+    "daisyui": "^3.5.1",
+    "pinia": "^2.1.6",
+    "vue-toast-notification": "^3.1.1"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
