adaptation plugin toast car erreur en build release

--- a/SimpleUrlShortener/SimpleUrlShortener.csproj
+++ b/SimpleUrlShortener/SimpleUrlShortener.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
+    <IsPackable>false</IsPackable>
     <SpaRoot>Client\simpleshortener_app</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
   </PropertyGroup>
@@ -32,11 +33,11 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.1" />
   </ItemGroup>
 
-    <!-- Configuration for publishing, resolve Sparoot and copying build output in wwwroot folder  -->
+  <!-- Configuration for publishing, resolve Sparoot and copying build output in wwwroot folder  -->
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
+  <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
     <Exec WorkingDirectory="$(SpaRoot)" Command="npm run generate" />
